--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
     </div>
 </div>
 
+    <div class="game-over">Game Over!!</div>
     <script src="./js/index.js"></script>
+    <!-- <script src="./js/gen.js"></script> -->
 </body>
 </html>
