update game with save to localStorage

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <body>
 <div class="game">
     <h1>Тема: <span id="game-topic"></span></h1>
-    <div class="gallows">
-        <div id="kran"></div>
+    <div class="gallows-with-hangman">
+        <div id="gallows"></div>
         <div id="head"></div>
         <div id="body"></div>
         <div id="left-leg"></div>
@@ -42,6 +42,7 @@
             <button class="letter">Ж</button>
             <button class="letter">З</button>
             <button class="letter">И</button>
+            <button class="letter">Й</button>
             <button class="letter">К</button>
             <button class="letter">Л</button>
             <button class="letter">М</button>
@@ -54,10 +55,13 @@
             <button class="letter">У</button>
             <button class="letter">Ф</button>
             <button class="letter">Х</button>
-            <button class="letter">Ч</button>
             <button class="letter">Ц</button>
+            <button class="letter">Ч</button>
             <button class="letter">Ш</button>
             <button class="letter">Щ</button>
+            <button class="letter">Ъ</button>
+            <button class="letter">Ы</button>
+            <button class="letter">Ь</button>
             <button class="letter">Э</button>
             <button class="letter">Ю</button>
             <button class="letter">Я</button> -->
@@ -65,7 +69,7 @@
     </div>
 </div>
 
-    <div class="game-over">Game Over!!</div>
+    <div class="game-over"></div>
     <script src="./js/index.js"></script>
     <!-- <script src="./js/gen.js"></script> -->
 </body>
